Fix Last played bias is ignored or doesn't work

The query maker results are now valid only for three minutes.
That means that not only a collection changed signal will trigger
the querymaker.

BUG: 311906
FIXED-IN: 2.7